<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Тренажер</string>

    <string name="button_help">\?</string>
    <string name="button_say">!</string>
    <string name="button_ok">\u2713</string>
    <string name="button_next">\u279C</string>
    <string name="button_video_lesson">Смотреть</string>
    <string name="button_theory">Читать</string>
    <string name="button_start_lesson">Начать урок!</string>
    <string name="button_next_lesson">следующий урок ></string>
    <string name="button_positive">OK</string>
    <string name="button_negative">Отмена</string>

    <string name="action_dictionary">Словарь</string>
    <string name="action_theory">Теория</string>
    <string name="action_video">Видеоурок</string>
    <string name="action_hard_mode">Hardcore Mode</string>

    <string name="title_activity_theory">Теория</string>
    <string name="title_activity_dictionary">Словарь</string>
    <string name="title_lessons">Уроки</string>

    <string name="title_dialog_next_lesson">Перейти на следующий урок?</string>
    <string name="title_dialog_complete_available_levels">Поздравляю!\nВы закончили все доступные уроки.</string>
    <string name="title_dialog_repeat_available_levels">Поздравляю!\nВы повторили все доступные уроки.</string>
    <string name="title_dialog_complete_all_levels">Поздравляю!\nВы закончили все уроки.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3369297231287003/6928841575</string>





    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>

</resources>
