<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_button"
            android:text="@string/title_activity_theory" />

        <Button
            style="@style/MaterialButton"
            android:id="@+id/button_video_lesson"
            android:text="@string/button_video_lesson"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green_clickable"/>

        <TextView
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_button"
            android:text="или" />

        <Button
            style="@style/MaterialButton"
            android:id="@+id/button_theory"
            android:text="@string/button_theory"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green_clickable"/>

    </LinearLayout>

    <Button
        style="@style/MaterialButton"
        android:id="@+id/button_start_lesson"
        android:text="@string/button_start_lesson"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/button_green_clickable"/>

</LinearLayout>