<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/level_header"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_hard_mode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/TextLittleButton"
            android:id="@+id/button1Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_help" />

        <EditText
            style="@style/TextLittle"
            android:id="@+id/editText1"
            android:imeOptions="actionGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true">

            <requestFocus />

        </EditText>

        <TextView
            style="@style/TextLittleButton"
            android:id="@+id/button3Say"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_say" />

        <TextView
            style="@style/TextLittleButton"
            android:id="@+id/button2OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok" />

        <TextView
            style="@style/TextLittleButton"
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next" />

    </LinearLayout>

</LinearLayout>